--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,16 @@
-{"firestore":{"database":"(default)","location":"nam5","rules":"firestore.rules","indexes":"firestore.indexes.json"},"flutter":{"platforms":{"android":{"default":{"projectId":"task-manager---ai-powered","appId":"1:1029364443108:android:3993ceea6bb5672db389f1","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"task-manager---ai-powered","configurations":{"android":"1:1029364443108:android:3993ceea6bb5672db389f1","web":"1:1029364443108:web:b59d7b009296a0cbb389f1"}}}}}}
+{
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
