--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   cloud_firestore: ^6.1.0
+  google_fonts: ^6.3.2
+  intl: ^0.20.2
+  provider: ^6.1.5+1
+  firebase_core: ^4.2.1
 
 dev_dependencies:
   flutter_test:
