--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,3 @@
-
 name: myapp
 description: "A new Flutter project."
 publish_to: 'none'
@@ -14,8 +13,9 @@ dependencies:
   firebase_core: ^3.0.0
   intl: ^0.19.0
   provider: ^6.1.2
+  fl_chart: 0.68.0
 
-de_dependencies:
+dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
